--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -1,19 +1,7 @@
 .top-page-tags {
-  font-size: $font-size-xxs;
+  font-size: 16px;
   margin-bottom: $space-xs;
   font-family: $roboto;
-
-  @include medium-and-up {
-    font-size: $font-size-sm;
-  }
-
-  a {
-    font-size: $font-size-xxs;
-
-    @include medium-and-up {
-      font-size: $font-size-sm;
-    }
-  }
 
   .tag-wrap {
     display: inline;
@@ -22,68 +10,26 @@
 
   .tag-wrap-bullet {
     pointer-events: none;
-    display: inline-block;
     font-weight: 400;
-    margin-left: -12px;
-    margin-right: 8px;
-
-    html[dir="rtl"] & {
-      margin-right: -12px;
-      margin-left: 8px;
-    }
+    margin: 0 8px;
+    color: $link-color;
   }
 
   .tag-item {
     _-- {
       color: $link-color;
-      font-weight: 400;
+      font-weight: 500;
     }
     display: inline-block;
-
-    @include x-large-and-up {
-      font-size: $font-size-sm;
-    }
-
-    &:not(:only-child):not(:last-child) {
-      margin-right: 7px;
-
-      html[dir="rtl"] & {
-        margin-right: 0;
-        margin-left: 7px;
-      }
-
-      &.page-type {
-        margin-right: 20px;
-
-        html[dir="rtl"] & {
-          margin-right: 0;
-          margin-left: 20px;
-        }
-      }
-    }
   }
 
   .tag-item--main {
-    _-- {
-      font-weight: 500;
-    }
-
     &.page-type {
       text-transform: uppercase;
 
       html[dir="rtl"] & {
         text-transform: lowercase;
-        margin-right: 0;
       }
-    }
-  }
-
-  .issues {
-    margin-right: 20px;
-
-    html[dir="rtl"] & {
-      margin-right: 0;
-      margin-left: 20px;
     }
   }
 }
