--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,42 +1,6 @@
 <footer id="footer" class="site-footer site-footer--{{ nav_type }}">
 	<div class="container">
-		<ul class="footer-social-media list-unstyled col-md-8 col-lg-5">
-			{% if social_overrides is defined and social_overrides|length %}
-				{% for social in social_overrides %}
-					<li>
-						<a href="{{ social.url }}"
-						   data-ga-category="Footer Navigation"
-						   data-ga-action="Social Icons"
-						   data-ga-label="{{ social.icon }}">
-							{{ social.icon|svgicon }}
-							<span class="visually-hidden">{{ social.icon }}</span>
-						</a>
-					</li>
-				{% endfor %}
-			{% else %}
-				{% for social in footer_social_menu %}
-					{% set name = "" %}
-					{% for class_name in social.classes %}
-						{% if 'fa-' in class_name %}
-							{% set name = class_name[3:] %}
-						{% else %}
-							{% set name = class_name %}
-						{% endif %}
-					{% endfor %}
-					<li>
-						{% set social_url = social.url %}
-						<a href="{{ social_url }}"
-						   data-ga-category="Footer Navigation"
-						   data-ga-action="Social Icons"
-						   data-ga-label="{{ social.title }}">
-							{{ name|svgicon }}
-							<span class="visually-hidden">{{ social.title }}</span>
-						</a>
-					</li>
-				{% endfor %}
-			{% endif %}
-		</ul>
-			
+		{% include 'footer_social_media.twig' %}
 		{% if nav_type != 'minimal' %}
 			<ul class="list-unstyled footer-links">
 				{% for primary in footer_primary_menu %}
