--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,5 +1,5 @@
 <footer id="footer" class="site-footer site-footer--{{ nav_type }}">
-	<div class="container">
+	<div class="container site-footer__container">
 		{% include 'footer_social_media.twig' %}
 		{% if nav_type != 'minimal' %}
 			<ul class="list-unstyled footer-links">
