--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -104,11 +104,19 @@ $navbar-default-height: 60px;
   }
 }
 
+.navbar-search-toggle {
+  color: $white;
+  margin: 11px;
+}
+
+.btn-navbar-toggle {
+  color: $white;
+  margin: 11px;
+}
+
 .navbar-search-toggle,
 .btn-navbar-toggle {
   line-height: 2rem;
-  margin: 11px;
-  color: $white;
   z-index: 1;
 
   .icon {
@@ -121,8 +129,10 @@ $navbar-default-height: 60px;
 
   // When menu is open, turn the button into the background overlay and hide the text
   &[aria-expanded="true"] {
+    _-- {
+      background: transparentize($grey-80, 0.5);
+    }
     z-index: 2;
-    background: transparentize($grey-80, 0.5);
     position: fixed;
     width: 100%;
     height: 100%;
@@ -494,15 +504,17 @@ $navbar-default-height: 60px;
   }
 
   .top-nav-search-btn {
-    background-color: $white;
+    _-- {
+      background-color: $white;
+      color: $dark-blue;
+      border-radius: 4px;
+    }
     border: none;
     position: absolute;
     right: 12px;
     font-size: $font-size-md;
     line-height: 22px;
-    color: $dark-blue;
     top: 11px;
-    border-radius: 4px;
 
     html[dir="rtl"] & {
       left: 12px;
@@ -542,20 +554,26 @@ $navbar-default-height: 60px;
 }
 
 .country-dropdown-toggle {
+  _-- {
+    font-size: $font-size-sm;
+    color: transparentize($white, 0.2);
+    background-color: $x-dark-blue;
+    &:focus {
+      color: $white;
+    }
+    &:hover {
+      color: $white;
+    }
+    @include large-and-up {
+      background-color: transparent;
+    }
+  }
   cursor: pointer;
-  font-size: $font-size-sm;
   border: 0;
-  color: transparentize($white, 0.2);
-  background: transparent;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   transition: color 100ms;
-
-  background-color: $x-dark-blue;
-  @include large-and-up {
-    background-color: transparent;
-  }
 
   &::after {
     content: "";
@@ -566,11 +584,6 @@ $navbar-default-height: 60px;
     display: inline-block;
     margin-left: 10px;
     transition: transform 300ms linear;
-  }
-
-  &:focus,
-  &:hover {
-    color: $white;
   }
 
   &[aria-expanded="true"] {
