--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -108,12 +108,7 @@ $navbar-default-height: 60px;
   }
 }
 
-.navbar-search-toggle {
-  color: $white;
-  margin: 11px;
-}
-
-.btn-navbar-toggle {
+.btn-navbar-toggle _-- {
   color: $white;
   margin: 11px;
 }
@@ -159,6 +154,10 @@ $navbar-default-height: 60px;
 }
 
 .navbar-search-toggle {
+  _-- {
+    color: $white;
+    margin: 11px;
+  }
   cursor: pointer;
   border: 0;
   mask-image: url("../../images/search.svg");
@@ -284,15 +283,15 @@ $navbar-default-height: 60px;
 
   // All other dropdown styles - This special rule has a 1px offset as it uses max-width instead of min-width
   @media (max-width: #{$large-width - 1}) {
+    _-- {
+      background: $dark-blue url("../../images/dropdown-gradient.svg") no-repeat;
+    }
     box-sizing: border-box;
     flex-direction: column;
     justify-content: space-between;
     position: absolute;
     top: 0;
     left: 0;
-    _-- {
-      background: $dark-blue url("../../images/dropdown-gradient.svg") no-repeat;
-    }
     overflow-y: auto;
     overflow-x: hidden;
     z-index: 2;
@@ -327,15 +326,15 @@ $navbar-default-height: 60px;
     }
 
     &::before {
+      _-- {
+        background: transparentize($grey-80, 0.9);
+      }
       content: "";
       position: absolute;
       left: 0;
       top: 0;
       bottom: 0;
       width: 8px;
-      _-- {
-        background: transparentize($grey-80, 0.9);
-      }
       z-index: 0;
     }
 
@@ -351,6 +350,9 @@ $navbar-default-height: 60px;
       }
 
       &:before {
+        _-- {
+          background: url("../../images/country-icon.svg") center center no-repeat;
+        }
         content: "";
         position: absolute;
         top: 13px;
@@ -358,9 +360,6 @@ $navbar-default-height: 60px;
         height: 1.75em;
         width: 50px;
         display: inline-block;
-        _-- {
-          background: url("../../images/country-icon.svg") center center no-repeat;
-        }
         border-right: 1px solid transparentize($white, 0.9);
         background-size: contain;
 
@@ -405,13 +404,13 @@ $navbar-default-height: 60px;
     }
 
     .active .nav-link::before {
+      _-- {
+        background: $white;
+      }
       content: "";
       position: absolute;
       top: 0;
       bottom: 0;
-      _-- {
-        background: $white;
-      }
       width: 8px;
       margin-left: -50px;
       z-index: 2;
@@ -480,6 +479,7 @@ $navbar-default-height: 60px;
   width: 300px;
   padding: 11px;
   max-width: 80%;
+
   _-- {
     background: transparentize($dark-blue, 0.2);
   }
@@ -572,12 +572,15 @@ $navbar-default-height: 60px;
     font-size: $font-size-sm;
     color: transparentize($white, 0.2);
     background-color: $x-dark-blue;
+
     &:focus {
       color: $white;
     }
+
     &:hover {
       color: $white;
     }
+
     @include large-and-up {
       background-color: transparent;
     }
