--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -26,14 +26,17 @@
 				{% endfor %}
 			</ul>
 		{% endif %}
+	</div>
 
-		<p class="copyright-text col-md-8" role="text">
-			{{ copyright_text_line1|e('wp_kses_post')|raw }}
-		</p>
-
-		<p class="gp-year" role="text">
-			{{ 'creative-commons'|svgicon }}
-			{{ copyright_text_line2|e('wp_kses_post')|raw }} {{"now"|date('Y')}}
-		</p>
+	<div class="site-footer__copyright">
+		<div class="container site-footer__copyright-wrapper">
+			<span class="site-footer__copyright-text" role="text">
+				{{ 'creative-commons'|svgicon }}
+				{{ copyright_text_line2|e('wp_kses_post')|raw }} {{"now"|date('Y')}}
+			</span>
+			<span class="site-footer__copyright-text" role="text">
+				{{ copyright_text_line1|e('wp_kses_post')|raw }}
+			</span>
+		</div>
 	</div>
 </footer>
