--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -39,6 +39,7 @@ Text Domain: planet4-master-theme
 @import "layout/cookies";
 @import "layout/cookies-new";
 @import "layout/footer";
+@import "layout/footer-social-media";
 @import "layout/forms";
 @import "layout/navbar";
 @import "layout/page-header";
