--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -42,46 +42,27 @@
 					</a>
 
 					{% if item.children is not empty %}
-						<nav class='nav-submenu'>
-							<div class='nav-submenu-wrapper'>
-								<ul>
-								{% for key,item in item.children %}
-									<li>
-										{% if fn('get_post_meta', item.ID, '_menu_item_object_id', true ) == act_page_id %}
-											{% set link_ga_action = 'Act' %}
-										{% elseif fn('get_post_meta', item.ID, '_menu_item_object_id', true ) == explore_page_id %}
-											{% set link_ga_action = 'Explore' %}
-										{% else %}
-											{% set link_ga_action = item.title %}
-										{% endif %}
-										<a
-											class="nav-link"
-											href="{{ item.get_link }}"
-											data-ga-category="Submenu Navigation"
-											data-ga-action="{{ link_ga_action }}"
-											data-ga-label="{{ page_category }}">
-												{{ item.title }}
-										</a>
-									</li>
-								{% endfor %}
-								</ul>
-							</div>
-						</nav>
+						{% include 'navigation-submenu.twig' with { menu: item } %}
 					{% endif %}
 				</li>
 				{% endfor %}
-				<li class="nav-item nav-donate">
+
+				{% set donate_menu = donate_menu_items[0] ?? {} %}
+				<li class="nav-donate">
 					<a
-						class="btn btn-donate"
-						href="{{ donatelink }}"
+						class="btn btn-donate {{ donate_menu.children ? 'dropdown' : '' }}"
+						href="{{ donate_menu.link }}"
 						data-ga-category="Menu Navigation"
 						data-ga-action="Donate"
 						data-ga-label="{{ page_category }}">
-							{{ donatetext }}
+							{{ donate_menu.title }}
 					</a>
-				</li>
+					{% if donate_menu.children is not empty %}
+						{% include 'navigation-submenu.twig' with { menu: donate_menu } %}
+					{% endif %}
 			</ul>
 		</nav>
+
 		{% set search_icon = 'search'|svgicon %}
 		{% set search_input_id = 'search_input' %}
 		{% set data_ga_attrs = 'data-ga-category="Menu Navigation" data-ga-action="Search" data-ga-label="' ~ page_category ~ '"' %}
